package org.example.excepciones;
// File: src/main/java/org/example/ConversionException.java
public class ConversionException extends Exception {
    public ConversionException(String message) {
        super(message);
    }
}