package org.misioncronos.excepciones;

public class MensajeException extends Exception {
    public MensajeException(String message) {
        super(message);
    }
}
