package org.misioncronos.excepciones;

public class MonitorException extends Exception {
    public MonitorException(String message) {
        super(message);
    }
}
