package org.misioncronos.excepciones;

public class NavegadorException extends Exception {
    public NavegadorException(String message) {
        super(message);
    }
}
