package org.misioncronos.excepciones;

public class TareaException extends Exception {
    public TareaException(String message) {
        super(message);
    }
}
